Remove obsolete compiler config (#530)
Because it conflicts with Spring Boot Starter parent 3.1.0. That now
uses --release, which is incompatible with --add-exports.